--- a/ToolShed.Web/Views/_ViewImports.cshtml
+++ b/ToolShed.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ToolShed.Web.Models
 @using ToolShed.Web.ViewModels
+@using ToolShed.Web.Infrastructure
 @addTagHelper ToolShed.Web.Infrastructure.*, ToolShed.Web
 @addTagHelper*, Microsoft.AspNetCore.Mvc.TagHelpers
