--- a/ToolShed.Web/Views/Shared/ProductBlock.cshtml
+++ b/ToolShed.Web/Views/Shared/ProductBlock.cshtml
@@ -3,14 +3,22 @@
 <div class="card-group">
     <div class="card-body">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div>
                     <h2>@Model.Name</h2>
                     <p>@Model.Description</p>
-                    <span class="badge badge-success">@($"Pris: {Model.Price:C2}")</span>
+                    <strong>@($"Pris: {Model.Price:C2}")</strong>
+                    <form asp-action="AddToCart" asp-controller="Cart"
+                        method="post" class="add-to-cart">
+                        <input type="hidden" asp-for="Id"/>
+                        <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQueryString()"/>
+                        <button type="submit" class="btn btn-success">
+                            Köp
+                        </button>
+                    </form>
                 </div>
                
-                <div class="col-md-8">
+                <div class="col-md-6">
                     <img src="http://via.placeholder.com/150x150" class="float-right" />
                 </div>
             </div>
