f*cked with bootstrap 4 , need a redo with design

--- a/ToolShed.Web/Views/Shared/_Layout.cshtml
+++ b/ToolShed.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+    @await  Component.InvokeAsync("CartWidget")
     <div class="container">
         <div class="row">
             <div class="col-md-2">
