--- a/ToolShed.Web/Views/Shared/ProductBlock.cshtml
+++ b/ToolShed.Web/Views/Shared/ProductBlock.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Product
 
-<div class="card-group">
+<div class="card">
     <div class="card-body">
         <div class="row">
             <div class="col-md-6">
