--- a/ToolShed.Web/Views/Cart/Index.cshtml
+++ b/ToolShed.Web/Views/Cart/Index.cshtml
@@ -34,6 +34,7 @@
         </tr>
     </tfoot>
 </table>
-<div class="float-right">
+<div class="pull-right">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Forsätt Handla</a>
+    <a class="btn btn-success" asp-action="Checkout" asp-controller="Order">Slutför order</a>
 </div>
