--- a/ToolShed.Web/Views/Catalog/Index.cshtml
+++ b/ToolShed.Web/Views/Catalog/Index.cshtml
@@ -4,6 +4,14 @@
     Layout = "~/Views/Shared/_Admin.cshtml";
 }
 
+
+
+<div class="pull-right">
+    @if (User.Identity.IsAuthenticated)
+    {
+        <a asp-controller="Account" asp-action="Logout" class="btn btn-sm btn-danger">Logga Ut</a>
+    }
+</div>
 <div class="row">
     <div class="col-md-6">
         <h2>Produktadministration</h2>
